Fixed height and align inputs, disabled registration

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,9 @@
 * {
-    margin:0px;
     padding:0px;
+}
+html, body {
+    height: 100%;
+    margin: 0;
 }
 #login {
     background-color: #d1a77a;
@@ -24,14 +27,28 @@
     font-size: 16px;
 }
 #login button {
-    background-color:#002b80;
+    /*background-color:#002b80;
     color:white;
     border-radius: 4px;
     box-shadow: 1px 1px 2px grey;
     width:50px;
     height:25px;
     text-align:center;
-    margin: 3px 0px 10px 5px;
+    margin: 3px 0px 10px 5px;*/
+    background-color: #f2e6d9;
+    border-radius: 5px;
+    border: 1px outset;
+    box-shadow: 1px 1px 1px 1px #372715;
+    padding: 10px 12px 10px 12px;
+    color: black;
+    font-weight: bold;
+    font-size: 13px;
+    cursor: pointer;
+}
+#login label {
+    width: 100px;
+    text-align: right;
+    display: inline-block;
 }
 .login_error {
     color:red;
@@ -41,7 +58,7 @@
 }
 #background_image_container {
     width: 100%;
-    height: 700px;
+    height: 100%;
     overflow-y: hidden;
     overflow-x: hidden;
     /*background-image: url('7.5m.png');
